// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TerminalPreview should match snapshot in portrait orientation 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 40px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="flex items-center gap-2 rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <div
        class="flex gap-1.5"
      >
        <div
          class="size-3 rounded-full bg-red-500"
        />
        <div
          class="size-3 rounded-full bg-yellow-500"
        />
        <div
          class="size-3 rounded-full bg-green-500"
        />
      </div>
      <span
        class="ml-2 text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 600px; max-height: 900px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with Linux chrome 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="flex items-center justify-between rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <span
        class="text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
      <div
        class="flex gap-1"
      >
        <div
          class="size-3 rounded-full bg-gray-400"
        />
        <div
          class="size-3 rounded-full bg-gray-400"
        />
        <div
          class="size-3 rounded-full bg-gray-400"
        />
      </div>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with Windows chrome 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="flex items-center justify-between rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <span
        class="text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
      <div
        class="flex gap-2"
      >
        <div
          class="flex size-4 items-center justify-center text-gray-600 dark:text-gray-400"
        >
          <span
            class="text-xs"
          >
            −
          </span>
        </div>
        <div
          class="flex size-4 items-center justify-center text-gray-600 dark:text-gray-400"
        >
          <span
            class="text-xs"
          >
            □
          </span>
        </div>
        <div
          class="flex size-4 items-center justify-center text-gray-600 dark:text-gray-400"
        >
          <span
            class="text-xs"
          >
            ×
          </span>
        </div>
      </div>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with drop shadow disabled 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: none;"
  >
    <div
      class="flex items-center gap-2 rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <div
        class="flex gap-1.5"
      >
        <div
          class="size-3 rounded-full bg-red-500"
        />
        <div
          class="size-3 rounded-full bg-yellow-500"
        />
        <div
          class="size-3 rounded-full bg-green-500"
        />
      </div>
      <span
        class="ml-2 text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with macOS chrome 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="flex items-center gap-2 rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <div
        class="flex gap-1.5"
      >
        <div
          class="size-3 rounded-full bg-red-500"
        />
        <div
          class="size-3 rounded-full bg-yellow-500"
        />
        <div
          class="size-3 rounded-full bg-green-500"
        />
      </div>
      <span
        class="ml-2 text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with no chrome 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;

exports[`TerminalPreview should match snapshot with transparent background enabled 1`] = `
<div
  class="mx-auto w-full transition-all duration-300"
  style="background: transparent; padding: 80px 80px; border-radius: 8px; box-sizing: content-box; max-width: 100%;"
>
  <div
    class="overflow-hidden rounded-lg"
    style="background-color: rgb(40, 42, 54); box-shadow: 0 20px 68px rgba(0, 0, 0, 0.55);"
  >
    <div
      class="flex items-center gap-2 rounded-t-lg bg-gray-200 px-4 py-2 dark:bg-gray-800"
    >
      <div
        class="flex gap-1.5"
      >
        <div
          class="size-3 rounded-full bg-red-500"
        />
        <div
          class="size-3 rounded-full bg-yellow-500"
        />
        <div
          class="size-3 rounded-full bg-green-500"
        />
      </div>
      <span
        class="ml-2 text-xs text-gray-600 dark:text-gray-400"
      >
        Terminal
      </span>
    </div>
    <div
      class="overflow-auto p-6 font-mono text-sm leading-relaxed transition-all duration-300"
      style="background-color: rgb(40, 42, 54); color: rgb(248, 248, 242); min-height: 200px; max-height: 350px;"
    >
      <div
        class="whitespace-pre-wrap break-words"
      />
    </div>
  </div>
</div>
`;
